# EDD2026

ActFinal/: Union-Find.cpp  UnionFind.cpp
ActFinal/Union-Find/: Union-Find.slnx
ActFinal/Union-Find/Union-Find/: Union_Find.py  union_find.pyproj
EDD2026/Agenda/: agenda.py  mapaarbol.py
EDD2026/Arbol/: Arbol.slnx  arbol.cbp  arbol.cpp  arbol.layout  arbol.py
EDD2026/Arbol/Arbol/: Arbol.py  Arbol.pyproj
EDD2026/Array_ia/: Array_ia.cbp  Array_ia.depend  Array_ia.layout  main.cpp
EDD2026/Arreglo/: Arreglo.cbp  Arreglo.depend  Arreglo.layout  main.cpp
EDD2026/ArregloDinamico/: ArregloDinamico.cbp  ArregloDinamico.depend  ArregloDinamico.layout  main.cpp
EDD2026/ED2026/: Arbol.txt  ag.py  arboles.py  arbolrojo-negro.py
EDD2026/ED2026/Memoria/: Memoria.cbp  Memoria.depend  Memoria.layout  main.cpp
EDD2026/ED2026/m_array/: CMakeLists.txt  array_test.cpp  m_array.cbp  m_array.cpp
EDD2026/ED2026/matrices/: main.cpp  matrices.cbp  matrices.layout
EDD2026/EDD2026/Pointers/: Pointers.layout  main.cpp
EDD2026/EDD2026/Pregunta/: Pregunta.cbp  Pregunta.layout  main.cpp
EDD2026/EDD2026/Prueba_lista/: Prueba_lista.cbp  Prueba_lista.depend  main.cpp
EDD2026/EDD2026/stack/: CMakeLists.txt  main.cpp  node.hpp  stack.cbp  stack.depend  stack.hpp  stack.layout
EDD2026/Hello/: Hello.depend  Hello.layout  main.cpp
EDD2026/Lista/: Lista.cbp  Lista.depend  main.cpp
EDD2026/arbolavl/: arbolavl.py  arbolbb.py  arbolbin.py
EDD2026/balance/: balance.layout
EDD2026/bind_list/: bind_list.cpp
EDD2026/evaluador/: balance.cbp
EDD2026/include/: array.h  array_test.cpp  listls.hpp
EDD2026/list/: c_listls.hpp  c_listtail.hpp  prueba.cpp
EDD2026/lista_ligada/: CMakeLists.txt  lista_ligada.cpp  listls.hpp
